infrastructure/deploiement-kube/base/12-seaweedfs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seaweed-master
  labels:
    app: seaweed-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seaweed-master
  template:
    metadata:
      labels:
        app: seaweed-master
    spec:
      containers:
      - name: seaweed-master
        image: chrislusf/seaweedfs:latest
        args:
        - master
        - -ip=$(POD_IP)
        - -ip.bind=0.0.0.0
        - -mdir=/data/master
        ports:
        - containerPort: 9333
        volumeMounts:
        - name: master-data
          mountPath: /data/master
      volumes:
      - name: master-data
        persistentVolumeClaim:
          claimName: minio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: seaweed-master
spec:
  selector:
    app: seaweed-master
  ports:
  - port: 9333
    targetPort: 9333
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seaweed-volume
  labels:
    app: seaweed-volume
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seaweed-volume
  template:
    metadata:
      labels:
        app: seaweed-volume
    spec:
      containers:
      - name: seaweed-volume
        image: chrislusf/seaweedfs:latest
        args:
        - volume
        - -mserver=seaweed-master:9333
        - -ip=seaweed-volume
        - -port=8080
        - -dir=/data/volume
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: volume-data
          mountPath: /data/volume
      volumes:
      - name: volume-data
        persistentVolumeClaim:
          claimName: minio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: seaweed-volume
spec:
  selector:
    app: seaweed-volume
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seaweed-filer
  labels:
    app: seaweed-filer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seaweed-filer
  template:
    metadata:
      labels:
        app: seaweed-filer
    spec:
      containers:
      - name: seaweed-filer
        image: chrislusf/seaweedfs:latest
        args: ["filer", "-master=seaweed-master:9333", "-ip=seaweed-filer", "-port=8888"]
        ports:
        - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: seaweed-filer
spec:
  selector:
    app: seaweed-filer
  ports:
  - port: 8888
    targetPort: 8888
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seaweed-s3
  labels:
    app: seaweed-s3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seaweed-s3
  template:
    metadata:
      labels:
        app: seaweed-s3
    spec:
      volumes:
      - name: s3-config
        configMap:
          name: seaweed-s3-config
      containers:
      - name: seaweed-s3
        image: chrislusf/seaweedfs:latest
        args:
        - s3
        - -filer=seaweed-filer:8888
        - -port=8333
        - -config=/etc/seaweedfs/s3.conf
        ports:
        - containerPort: 8333
        volumeMounts:
        - name: s3-config
          mountPath: /etc/seaweedfs
---
apiVersion: v1
kind: Service
metadata:
  name: seaweed-s3
spec:
  selector:
    app: seaweed-s3
  ports:
  - port: 8333
    targetPort: 8333
